# Y3A_2425_Prototyping

./: .gitignore
CMakeProject/: CMakeLists.txt
Y3A_MiniMap/Config/: DefaultEngine.ini  DefaultGame.ini
Y3A_MiniMap/Content/DepthFadeStuff/: DepthFade.uasset  PP_DepthValue.uasset
Y3A_MiniMap/Content/Meshes/: MINIMAPHOLDER.uasset
Y3A_MiniMap/Content/NewBps/: MiniMapNew.uasset  MovingWall.uasset  RenderingMinimapNew.uasset  Scan_Plane.uasset  Wall.uasset  WeaponFinder.uasset
Y3A_MiniMap/Content/NewMats/: Red.uasset
Y3A_MiniMap/Content/downloaded/: T_White.uasset
Y3A_MiniMap/Saved/Config/WindowsEditor/: Input.ini  (+1 more)
Y3A_MiniMap/Saved/SourceControl/: UncontrolledChangelists.json
Y3A_MiniMap/Saved/Telemetry/: Telemetry.json
Y3A_W2_AI_Movement/: Y3A_W2_AI_Movement.sln  Y3A_W2_AI_Movement.uproject
Y3A_W2_AI_Movement/Binaries/Win64/: UnrealEditor.modules  Y3A_W2_AI_MovementEditor.target
Y3A_W2_AI_Movement/Config/: DefaultEngine.ini  DefaultGame.ini
Y3A_W2_AI_Movement/Content/Blueprints/: 3D_Pathfinding.uasset  Crawl_NavLink.uasset  Dijkstra_Pathfinder.uasset  Dijkstra_Pathfinder_Input.uasset  Jump_NavLink.uasset  NavMesh_Prototype.umap  PlayerUnit.uasset  PointParameters.uasset  Prorotypes.umap  RTSGameMode.uasset  RTSPlayerController.uasset  RotatingPlatform.uasset  Unit.uasset
Y3A_W2_AI_Movement/Saved/Config/: ConsoleHistory.ini
Y3A_W2_AI_Movement/Saved/SourceControl/: UncontrolledChangelists.json
Y3A_W2_AI_Movement/Saved/Telemetry/: Telemetry.json
Y3A_W2_AI_Movement/Source/: Y3A_W2_AI_Movement.Target.cs  Y3A_W2_AI_MovementEditor.Target.cs
(+2072 files in other folders)
